Run javafx with preview features enabled